# notepadmd-plus

./: Cargo.toml  LICENSE  README.md  build-windows.cmd  build-windows.sh  build.rs
assets/: icon_64.rgba  make_icon.py
src/: app.rs  highlight.rs  lib.rs  main.rs
tests/: mirror_match_debug.rs  mirror_repro.rs  preview_selection_repro.rs
